<resources>
    <string name="app_name" translatable="false">SimpleChat</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="authentication">Authentication</string>
    <string name="status">Status</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="messages">Messages</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter">Enter</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_arrow">Create Account ></string>
    <string name="login_arrow"><![CDATA[< Login]]></string>
    <string name="log_out">Log out</string>
    <string name="todo">TODO</string>
    <string name="send_image">Send image</string>
</resources>