<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="34sp"
            android:layout_marginTop="96dp"
            android:id="@+id/textView"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="96dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:minHeight="48dp"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"/>

    <Button
            android:text="@string/login"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="161dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginTop="64dp"
            android:textSize="24sp"
            app:cornerRadius="10dp"
            android:onClick="loginAuth"/>

    <Button
            android:text="@string/sign_in"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSingin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:textAlignment="center"
            app:cornerRadius="10dp"
            android:onClick="signinAuth"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            android:layout_marginTop="32dp"/>

    <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSingin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>