<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/gray_dark">

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_view_title"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmailLogin"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:autofillHints=""
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
            style="@style/edit_text_style"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordLogin"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/edit_text_style"/>

    <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:onClick="buttonLogin"
            style="@style/button_style"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>

    <TextView
            android:text="@string/create_account_arrow"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="buttonCreateAccount"
            style="@style/link_button"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            app:srcCompat="@drawable/simplechat"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>