<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatActivity">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:id="@+id/imageButtonSend"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/send_message"
            android:onClick="buttonSendMessage"
            style="@style/image_button_style"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
            app:layout_constraintTop_toTopOf="@+id/editTextMessage"/>


    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
            style="@style/scroll_view_style"
            android:id="@+id/scrollView"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            android:layout_marginTop="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/messagesBox">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMessages"
                    android:hint="@string/messages"/>
        </LinearLayout>
    </ScrollView>

    <ImageView
            android:layout_height="48dp"
            app:srcCompat="@drawable/simplechat"
            android:id="@+id/imageViewLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_width="0dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextMessage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            style="@style/message_text_style"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:hint="@string/message"
            android:autofillHints=""
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            android:layout_marginEnd="8dp"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/imageButton2"
            style="@style/image_button_style"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
            app:layout_constraintTop_toTopOf="@+id/editTextMessage"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonSend"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/send_image"
            android:onClick="sendImage"/>

    <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:id="@+id/imageButton3"
            android:background="#00000000"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:contentDescription="Deauth"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
            android:onClick="closeChat"/>

</androidx.constraintlayout.widget.ConstraintLayout>